# noc-releases

./: .gitignore  README.md
agent/: README.md  pyproject.toml
agent/packaging/linux/: install.sh  nethraops-agent.service  uninstall.sh
agent/packaging/linux/deb/: build.sh
agent/packaging/linux/deb/DEBIAN/: conffiles  control  postinst  postrm  prerm
agent/packaging/linux/repos/: README.md
agent/packaging/linux/repos/_site/: index.html
agent/packaging/linux/repos/apt/: apt-ftparchive.conf  build-repo.sh
agent/packaging/linux/repos/yum/: build-repo.sh
agent/packaging/linux/rpm/: build.sh  nethraops-agent.spec
agent/packaging/signing/: README.md  gen-key.conf  generate-key.sh  nethraops-repo-pubkey.asc  sign-deb.sh  sign-repo-metadata.sh  sign-rpm.sh
agent/packaging/windows/: Install-NethraOpsAgent.ps1  Uninstall-NethraOpsAgent.ps1
agent/packaging/windows/bootstrap/: Bundle.wxs  PythonEmbed.wxs  README.md  build.ps1
agent/packaging/windows/intune/: README.md  build-intunewin.ps1
agent/packaging/windows/msi/: CustomActions.wxs  License.rtf  Product.wxs  Variables.wxi  build-wixl.sh  build.ps1  msi-install.ps1  msi-uninstall.ps1
agent/packaging/windows/msi/scripts/: detection.ps1  install.cmd  repair.cmd  uninstall.cmd  upgrade.cmd
agent/src/nethraops_agent/: __init__.py  __main__.py  buffer.py  cli.py  client.py  collector.py  config.py  log.py  runner.py
agent/src/nethraops_agent/windows/: __init__.py  service.py
agent/tests/: conftest.py  test_buffer.py  test_client.py  test_collector.py  test_runner.py  test_windows_service.py
(+11 files in other folders)
